--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
     <title>세계 자동차 판매량 순위 대시보드</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-treemap@2.3.0"></script>
 </head>
 <body>
     <div class="container">
         <!-- 헤더 & 언어 선택 -->
         <div class="top-bar">
-            <h1 id="mainTitle">🚗 세계 자동차 판매량 순위</h1>
+            <div class="title-section">
+                <h1 id="mainTitle">세계 자동차 판매량 순위</h1>
+                <div class="update-info" id="updateInfo">
+                    <span class="update-badge">로딩 중...</span>
+                </div>
+            </div>
             <div class="language-selector">
-                <button class="lang-btn active" data-lang="ko">🇰🇷 한국어</button>
-                <button class="lang-btn" data-lang="en">🇺🇸 English</button>
-                <button class="lang-btn" data-lang="ja">🇯🇵 日本語</button>
-                <button class="lang-btn" data-lang="zh">🇨🇳 中文</button>
+                <button class="lang-btn active" data-lang="ko">한국어</button>
+                <button class="lang-btn" data-lang="en">English</button>
+                <button class="lang-btn" data-lang="ja">日本語</button>
+                <button class="lang-btn" data-lang="zh">中文</button>
             </div>
         </div>
 
         <!-- 연도 및 구동 방식 선택 -->
         <section class="year-powertrain-selection">
             <div class="selection-group">
-                <h2>📅 연도 선택</h2>
+                <h2>연도 선택</h2>
                 <div class="year-buttons">
                     <button class="year-btn" data-year="2020">2020</button>
                     <button class="year-btn" data-year="2021">2021</button>
@@ -34,12 +40,12 @@
                 </div>
             </div>
             <div class="selection-group">
-                <h2>⚡ 구동 방식</h2>
+                <h2>구동 방식</h2>
                 <div class="powertrain-buttons">
                     <button class="powertrain-btn active" data-type="all">전체</button>
-                    <button class="powertrain-btn" data-type="내연기관">🛢️ 내연기관</button>
-                    <button class="powertrain-btn" data-type="하이브리드">⚡ 하이브리드</button>
-                    <button class="powertrain-btn" data-type="전기차">🔋 전기차</button>
+                    <button class="powertrain-btn" data-type="내연기관">내연기관</button>
+                    <button class="powertrain-btn" data-type="하이브리드">하이브리드</button>
+                    <button class="powertrain-btn" data-type="전기차">전기차</button>
                 </div>
             </div>
         </section>
@@ -47,7 +53,7 @@
         <!-- 기간 선택 -->
         <section class="period-selection">
             <div class="period-row">
-                <h2>📊 기간 선택</h2>
+                <h2>기간 선택</h2>
                 <div class="period-tabs">
                     <button class="period-tab active" data-period="yearly">연간 전체</button>
                     <button class="period-tab" data-period="Q1">1분기</button>
@@ -57,7 +63,7 @@
                 </div>
             </div>
             <div class="period-row">
-                <h2>📅 월별 선택</h2>
+                <h2>월별 선택</h2>
                 <div class="month-tabs">
                     <button class="month-tab" data-month="01">1월</button>
                     <button class="month-tab" data-month="02">2월</button>
@@ -80,7 +86,7 @@
             <!-- 제조사 순위 -->
             <section class="company-ranking">
                 <div class="section-header">
-                    <h2>🏆 제조사 판매량 순위</h2>
+                    <h2>제조사 판매량 순위</h2>
                     <div class="period-info" id="periodInfo">2024년 연간</div>
                 </div>
                 <div class="ranking-header">
@@ -98,19 +104,19 @@
             <!-- 차종별 상세 정보 -->
             <section class="model-details">
                 <div class="section-header">
-                    <h2>🚙 차종별 상세 순위</h2>
+                    <h2>차종별 상세 순위</h2>
                     <div class="company-info" id="selectedCompanyInfo">제조사를 선택하세요</div>
                 </div>
                 <div class="model-header" id="modelHeader" style="display: none;">
                     <div class="header-model-rank">순위</div>
                     <div class="header-model-name">모델명</div>
-                    <div class="header-model-type">차종</div>
-                    <div class="header-model-change">전년대비</div>
                     <div class="header-model-sales">판매대수</div>
+                    <div class="header-model-change">전년대비</div>
+                    <div class="header-model-type">차종</div>
                 </div>
                 <div class="model-list" id="modelList">
                     <div class="empty-state">
-                        <p>👈 왼쪽에서 제조사를 클릭하여 차종별 판매량을 확인하세요</p>
+                        <p>왼쪽에서 제조사를 클릭하여 차종별 판매량을 확인하세요</p>
                     </div>
                 </div>
             </section>
@@ -119,11 +125,11 @@
         <!-- 차트 영역 -->
         <section class="chart-section">
             <div class="chart-container">
-                <h2>📈 제조사별 판매량 차트</h2>
+                <h2 id="companyChartTitle" style="cursor: pointer;">제조사별 판매량 차트</h2>
                 <canvas id="companyChart"></canvas>
             </div>
             <div class="chart-container">
-                <h2>📊 선택한 제조사의 차종별 비율</h2>
+                <h2>선택한 제조사의 차종별 비율</h2>
                 <canvas id="modelChart"></canvas>
             </div>
         </section>
@@ -131,7 +137,7 @@
         <!-- 연도별 판매량 추이 차트 -->
         <section class="chart-section">
             <div class="chart-container chart-full-width">
-                <h2>📊 연도별 브랜드 판매량 추이</h2>
+                <h2>연도별 브랜드 판매량 추이</h2>
                 <canvas id="rankingTrendChart"></canvas>
             </div>
         </section>
